--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@bigcommerce/big-design": "^0.36.2",
     "@bigcommerce/big-design-icons": "^0.23.1",
     "@bigcommerce/big-design-theme": "^0.19.1",
+    "axios": "^1.6.8",
     "dotenv": "^16.3.0",
     "firebase": "^9.23.0",
     "jsonwebtoken": "^9.0.1",
@@ -30,6 +31,7 @@
     "node-bigcommerce": "github:bigcommerce/node-bigcommerce",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.2",
     "styled-components": "^5.3.11",
     "swr": "^1.3.0"
   },
